aks/Project-simplehtml/yaml-html-demo/service_cluterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-svc
  namespace: demo
  labels:
    app: aks-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: aks-demo
