aks/Project-simplehtml/yaml-html-demo/service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-svc
  namespace: demo
  labels:
    app: aks-demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32500
    protocol: TCP
  selector:
    app: aks-demo
