aks/Project-simplehtml/yaml-html-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-demo-ingress
  namespace: demo
spec:
  rules:
  - host: zerotoheroaks.westeurope.cloudapp.azure.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-demo-svc
            port:
              number: 8080
